# loom-agent-hq

./: .gitignore  README.md  index.html  package-lock.json  package.json  preview.html  vite.config.ts  vite.config.ts.timestamp-1774380062158-a869e90274d54.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AgentCards.tsx  CommandBar.tsx  LiveFeed.tsx  Sidebar.tsx  TitleBar.tsx
src/hooks/: useAgentScanner.ts  useTauri.ts
src/store/: index.ts
src/types/: index.ts
