[package]
name = "loom-agent-hq"
version = "0.1.0"
description = "Loom — Agent HQ: unified control plane for AI coding agents"
authors = ["Chris DiMarco"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "loom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# For process detection
sysinfo = "0.31"
# For async tasks
tokio = { version = "1", features = ["full"] }

[profile.release]
# Reduce binary size
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
